# atomic

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Claude.md  README.md  ROADMAP.md  SECURITY.md  atomic.excalidraw  deny.toml  hosts.conf  serializable_traits.rs
atomic-py/: Cargo.toml  LICENSE  pyproject.toml
atomic-py/src/: errors.rs  lib.rs  rdd.rs  runner.rs  server.rs  utils.rs  worker.rs
atomic-py/src/io/: hdfs_file_reader.rs  hdfs_file_writer.rs
core/: Cargo.toml
core/src/: aggregator.rs  cache.rs  cache_tracker.rs  context.rs  dependency.rs  env.rs  error.rs  executor.rs  lib.rs  map_output_tracker.rs  partitioner.rs  ser_data.rs  serializable_traits.rs  split.rs
core/src/api/: client.rs  conf.rs  ctx.rs  exception.rs  mod.rs  models.rs  scheduler.rs  utils.rs
core/src/io/: decoders.rs  hdfs_io.rs  local_file_reader.rs  local_fs_io.rs  mod.rs
core/src/partial/: approximate_action_listener.rs  count_evaluator.rs  grouped_count_evaluator.rs
core/src/rdd/: cartesian_rdd.rs  co_grouped_rdd.rs  coalesced_rdd.rs  flatmapper_rdd.rs  hdfs_read_rdd.rs  local_fs_read_rdd.rs  map_partitions_rdd.rs  mapper_rdd.rs  mod.rs  pair_rdd.rs  parallel_collection_rdd.rs  partitionwise_sampled_rdd.rs  rdd.rs  shuffled_rdd.rs  union_rdd.rs  zip_rdd.rs
core/src/scheduler/: base_scheduler.rs  dag_scheduler.rs  distributed_scheduler.rs  job.rs  job_listener.rs  live_listener_bus.rs  local_scheduler.rs  mod.rs  result_task.rs  stage.rs  task.rs
core/src/shuffle/: mod.rs  shuffle_fetcher.rs  shuffle_manager.rs  shuffle_map_task.rs
core/src/utils/: bounded_priority_queue.rs  client.rs  mod.rs  random.rs  test_utils.rs
core/tests/: e.rs  pi.rs  test_async.rs  test_pair_rdd.rs  test_rdd.rs
crates/atomic-cli/: Cargo.toml  README.md
crates/atomic-cli/src/: cluster.rs  commands.rs  k8s.rs  main.rs  ssh.rs
crates/atomic-compute/: Cargo.toml
crates/atomic-compute/src/: app.rs  backend.rs  builtin_tasks.rs  context.rs  env.rs  error.rs  executor.rs  hosts.rs  lib.rs  native_backend.rs  shuffle_map.rs  task_registry.rs  task_traits.rs  tls.rs  udf_backend.rs
crates/atomic-compute/tests/: test_k8s_allocation.rs
crates/atomic-data/: Cargo.toml
crates/atomic-data/src/: accumulator.rs  aggregator.rs  broadcast.rs  data.rs  dependency.rs  distributed.rs  env.rs  error.rs  fn_traits.rs  hosts.rs  lib.rs  partitioner.rs  rdd.rs  split.rs  state_store.rs  stub.rs  task_context.rs  task_registry.rs
crates/atomic-graph/: Cargo.toml  README.md
crates/atomic-graph/src/: graph.rs  lib.rs  neighbors.rs  pregel.rs  structural.rs  topology.rs  types.rs
crates/atomic-js/: .gitignore  Cargo.toml  README.md  index.d.ts  index.js  index.ts  package-lock.json  package.json  tsconfig.json  tsconfig.typecheck.json  vitest.config.ts
crates/atomic-js/src/: context.rs  distributed_vars.rs  graph.rs  lib.rs  main.rs  rdd.rs  runtime.rs  shared.rs  sql.rs  streaming.rs  structured.rs
crates/atomic-js/test/: bugs.test.ts  graph.test.ts  sql.test.ts  streaming.test.ts  transforms.test.ts  with-context.test.ts
crates/atomic-k8s/: Cargo.toml
crates/atomic-k8s/src/: driver_job.rs  lib.rs  (+1 more)
crates/atomic-nlq/: Cargo.toml  README.md
crates/atomic-py/: Cargo.toml  README.md  pyproject.toml
crates/atomic-python/: Cargo.toml  README.md  pyproject.toml
crates/atomic-scheduler/: Cargo.toml  DESIGN.md  DESIGN.v2.md
crates/atomic-sql/: Cargo.toml  README.md
crates/atomic-streaming/: Cargo.toml  README.md
crates/atomic-structured/: Cargo.toml  README.md
crates/atomic-worker/: Cargo.toml
crates/ember-cache/: Cargo.toml
crates/ember-compute/: Cargo.toml
crates/ember-data/: Cargo.toml
crates/ember-scheduler/: Cargo.toml
crates/ember-shuffle/: Cargo.toml
examples/: Cargo.toml  README.md  docker_sum.rs  file_read.rs  group_by.rs  join.rs  make_rdd.rs  parquet_column_read.rs  subtract.rs  wasm_map_reduce.rs  wasm_runtime.rs
examples/agent_code_audit/: Cargo.toml
examples/agent_news_triage/: Cargo.toml
examples/agent_step/: Cargo.toml
examples/agent_workflow_dag/: Cargo.toml
examples/bench_join/: Cargo.toml
examples/bench_pi/: Cargo.toml
examples/bench_sort/: Cargo.toml
examples/bench_wordcount/: Cargo.toml
examples/caching/: Cargo.toml
examples/docker_json_task/: Cargo.toml  manifest.toml
examples/docker_sum_task/: Cargo.toml  Dockerfile  README.md  manifest.toml
examples/docker_task/: Cargo.toml  Dockerfile  README.md
examples/graph/: Cargo.toml
examples/group_by/: Cargo.toml
examples/integration/: Cargo.toml
examples/javascript/: README.md  local_word_count.js  map_reduce.js  package.json
examples/joins/: Cargo.toml
examples/js_runner/: Cargo.toml
examples/nlq/: Cargo.toml
examples/nlq_demo/: Cargo.toml
examples/pi/: Cargo.toml
examples/py-demo/: Makefile  README.md  main.py  pyproject.toml
examples/python/: README.md  local_word_count.py
examples/rust_wasm_task/: Cargo.toml  README.md
examples/sort/: Cargo.toml
examples/sql/: Cargo.toml
examples/src/: file_read.rs  hdfs_file_read.rs  join.rs  make_rdd.rs  parquet_column_read.rs  serializer_example.rs
examples/streaming/: Cargo.toml
examples/task_double/: Cargo.toml
examples/task_wordcount/: Cargo.toml
examples/ts-demo/: README.md  package-lock.json  package.json  tsconfig.json
examples/wasm_json/: Cargo.toml  manifest.toml
examples/wasm_json_task/: Cargo.toml  manifest.toml
examples/wasm_macro_task/: Cargo.toml  README.md
examples/wasm_task_definition/: README.md  task.wat
examples/wordcount/: Cargo.toml
tests/: Cargo.toml  test_actions.rs  test_backend_dispatch.rs  test_cache_behavior.rs  test_distributed.rs  test_local_e2e.rs  test_map_output_tracker_panics.rs  test_named_partitioner.rs  test_native_backend_errors.rs  test_pair_ops.rs  test_pair_rdd.rs  test_rdd.rs  test_set_ops.rs  test_shuffle_isolation.rs  test_shuffle_recovery.rs  test_sort_by_task.rs  test_streaming_lifecycle.rs  test_transforms.rs  test_worker_auth.rs  test_worker_fault_tolerance.rs
tests/tests/: test_distributed.rs  test_pair_rdd.rs  test_rdd.rs
(+555 files in other folders)
