[workspace.package]
name = "ember"
version = "0.1.0"
edition = "2024"

[package]
name = "ember"
edition.workspace = true
version.workspace = true

[workspace]
members = ["crates/*", "."]

workspace.exclude = ["examples/*", "tests/*"]
workspace.default-members = ["."]

[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
toml = { workspace = true }
ember-wasm = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tonic-build = { workspace = true }
hyper = { workspace = true }
http-body-util = { workspace = true }
http = { workspace = true }
tempfile = { workspace = true }
once_cell.workspace = true
dashmap.workspace = true
rand.workspace = true
parking_lot.workspace = true
log.workspace = true
anyhow.workspace = true
uuid.workspace = true
async-trait.workspace = true
statrs.workspace = true
itertools.workspace = true
rand_distr.workspace = true
rand_pcg.workspace = true
dotenvy.workspace = true
rustc-hash.workspace = true
num_cpus.workspace = true
bincode.workspace = true
dyn-clone.workspace = true
futures.workspace = true
crossbeam.workspace = true
hyper-util.workspace = true
ember-data.workspace = true
ember-utils.workspace = true
ember-cache.workspace = true
ember-compute.workspace = true
ember-scheduler.workspace = true


[workspace.dependencies]
ember-cache = { path = "crates/ember-cache" }
ember-compute = { path = "crates/ember-compute" }
ember-scheduler = { path = "crates/ember-scheduler" }
ember-data = { path = "crates/ember-data" }
ember-utils = { path = "crates/ember-utils" }
http = "1.3.1"
tempfile = "3.23.0"
dyn-clone = "1.0.20"
futures = "0.3.31"
crossbeam = "0.8.4"
hyper-util = "0.1.17"
log = "0.4.28"
tokio-util = "0.7.17"
dotenvy = "0.15.7"
rand_distr = "0.5.1"
rand_pcg = "0.9.0"
uuid = { version = "1.18.1", features = ["v4"] }
rustc-hash = "2.1.1"
async-trait = "0.1.89"
statrs = "0.18.0"
itertools = "0.14.0"
tonic = "0.14.2"
prost = "0.14.1"
tonic-build = "0.14.2"
hyper = "1.7.0"
http-body-util = "0.1.3"
ember-macros = { path = "crates/ember-macros" }
ember-wasm = { path = "crates/ember-wasm" }

wasmtime = "38.0.3"
wasmparser = "0.240.0"
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.42", features = ["full"] }
dashmap = "6.1"
parking_lot = "0.12"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
bincode = "2.0.1"
rand = "0.9.2"
once_cell = "1.20"
rayon = "1.10"
hostname = "0.4"
serde_json = "1.0.145"
clap = { version = "4.5", features = ["derive"] }
num_cpus = "1.16"
anyhow = "1.0"
toml = "0.9.8"
