[workspace.package]
name = "atomic"
version = "0.1.0"
edition = "2024"
authors = ["Sandip Dey <sandip.dey1988@yahoo.com>"]

# [package]
# name = "atomic"
# edition.workspace = true
# version.workspace = true

[workspace]
members = ["crates/*"]
exclude = ["examples/*"]

[workspace.dependencies]
atomic-compute = { path = "crates/atomic-compute" }
atomic-scheduler = { path = "crates/atomic-scheduler" }
atomic-data = { path = "crates/atomic-data" }
atomic-utils = { path = "crates/atomic-utils" }
atomic-runtime = { path = "crates/atomic-runtime" }
atomic-runtime-macros = { path = "crates/atomic-runtime-macros" }
atomic-python = { path = "crates/atomic-python" }
atomic-js = { path = "crates/atomic-js" }
pyo3 = { version = "0.28.3", features = ["auto-initialize"] }
rquickjs = { version = "0.11.0", features = ["full"] }
syn = { version = "2.0.117", features = ["full"] }
quote = "1"
proc-macro2 = "1"
rkyv = { version = "0.8.12", features = ["std", "bytecheck"] }
http = "1.3.1"
tempfile = "3.27.0"
dyn-clone = "1.0.20"
futures = "0.3.32"
crossbeam = "0.8.4"
hyper-util = "0.1.20"
log = "0.4.28"
tokio-util = "0.7.17"
dotenvy = "0.15.7"
rand_distr = "0.6.0"
rand_pcg = "0.10.1"
uuid = { version = "1.23.0", features = ["v4"] }
rustc-hash = "2.1.2"
async-trait = "0.1.89"
statrs = "0.18.0"
itertools = "0.14.0"
tonic = "0.14.5"
prost = "0.14.1"
tonic-build = "0.14.5"
hyper = "1.9.0"
http-body-util = "0.1.3"
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.51.0", features = ["full"] }
dashmap = "6.1"
parking_lot = "0.12"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
bincode = "2"
rand = "0.10.0"
once_cell = "1.21.4"
rayon = "1.10"
hostname = "0.4"
serde_json = "1.0.145"
clap = { version = "4.6.0", features = ["derive"] }
num_cpus = "1.16"
anyhow = "1.0.102"
toml = "0.9.8"
