[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.82"
authors = ["Sandip Dey <sandip.dey1988@yahoo.com>"]

[workspace]
resolver = "2"
members = ["crates/*", "examples/*"]
exclude = ["examples/py-demo", "examples/ts-demo"]

# ── Root package ──────────────────────────────────────────────────────────────
# The workspace root is also the "atomic" package that owns:
#   - the integration test binary (integration/src/main.rs)
#   - integration test suites in tests/
[package]
name = "atomic-engine"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "integration"
path = "integration/main.rs"

[[bin]]
name = "integration_shuffle_wordcount"
path = "integration/shuffle_wordcount.rs"

[[bin]]
name = "integration_multi_stage"
path = "integration/multi_stage.rs"

[[bin]]
name = "integration_fault_tolerance"
path = "integration/fault_tolerance.rs"

[[bin]]
name = "integration_cache_locality"
path = "integration/cache_locality.rs"

[[bin]]
name = "integration_named_partitioner"
path = "integration/named_partitioner.rs"

[[bin]]
name = "integration_sort_by_task"
path = "integration/sort_by_task.rs"

[dependencies]
atomic-compute = { workspace = true }
atomic-data = { workspace = true }
serde_json = { workspace = true }
env_logger = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
atomic-compute = { workspace = true }
atomic-data = { workspace = true }
atomic-scheduler = { workspace = true }
atomic-streaming = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tempfile = { workspace = true }
parking_lot = { workspace = true }

[workspace.dependencies]
atomic-graph = { path = "crates/atomic-graph" }
atomic-nlq = { path = "crates/atomic-nlq" }
atomic-sql = { path = "crates/atomic-sql" }
atomic-compute = { path = "crates/atomic-compute" }
atomic-scheduler = { path = "crates/atomic-scheduler" }
atomic-k8s = { path = "crates/atomic-k8s" }
atomic-streaming = { path = "crates/atomic-streaming" }
atomic-data = { path = "crates/atomic-data" }
atomic-utils = { path = "crates/atomic-utils" }
atomic-runtime-macros = { path = "crates/atomic-runtime-macros" }
atomic-py = { path = "crates/atomic-py" }
atomic-js = { path = "crates/atomic-js" }
atomic-worker = { path = "crates/atomic-worker" }
pyo3 = { version = "0.29.0" }
pythonize = "0.29.0"
pyo3-arrow = "0.19.0"
deno_core = { version = "0.404.0" }
base64 = { version = "0.22" }
syn = { version = "2.0.118", features = ["full"] }
quote = "1"
proc-macro2 = "1"
rkyv = { version = "0.8.16", features = ["std", "bytecheck"] }
http = "1.4.2"
tempfile = "3.27.0"
dyn-clone = "1.0.20"
futures = "0.3.32"
crossbeam = "0.8.4"
hyper-util = "0.1.20"
log = "0.4.32"
petgraph = { version = "0.8.3" }
datafusion = "53.1.0"
parquet = "59.0.0"
tokio-util = "0.7.17"
dotenvy = "0.15.7"
rand_distr = "0.6.0"
rand_pcg = "0.10.2"
uuid = { version = "1.23.3", features = ["v4"] }
rustc-hash = "2.1.2"
async-trait = "0.1.89"
statrs = "0.18.0"
itertools = "0.15.0"
tonic = "0.14.6"
prost = "0.14.4"
tonic-build = "0.14.6"
hyper = "1.10.1"
http-body-util = "0.1.3"
prometheus = { version = "0.14.0", default-features = false, features = [
    "process",
] }
async-stream = "0.3.6"
aws-sdk-s3 = { version = "1.135.0" }
aws-config = { version = "1.8.18", features = ["behavior-version-latest"] }
aws-credential-types = { version = "1" }
tokio-rustls = { version = "0.26" }
rustls = { version = "0.23.40" }
rustls-pemfile = { version = "2.0" }
rcgen = { version = "0.14.8" }
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
dashmap = "6.2.1"
parking_lot = "0.12"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
bincode = "2"
rand = "0.10.1"
once_cell = "1.21.4"
rayon = "1.12.0"
hostname = "0.4"
serde_json = "1.0.150"
clap = { version = "4.6.1", features = ["derive"] }
num_cpus = "1.16"
regex = "1.12.4"
toml = "1.1.2"
env_logger = "0.11"
lazy_static = "1.5.0"
lru = "0.18.0"
inventory = "0.3"
# Binary integrity check
sha2 = "0.11.0"
hex = "0.4"
