[package]
name = "atomic-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "atomic_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.2"
serde = { version = "1.0.159", features = ["rc", "derive"] }
atomic = { workspace = true }
# atomic-sql = { workspace = true }
# atomic-streaming = { workspace = true }
