[package]
name = "atomic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "build.rs"

[lib]
path = "src/lib.rs"
doctest = false

[dependencies]
http = { version = "1.1.0" }
async-trait = "0.1.83"
tokio = { version = "1.40.0", features = ["full"] }
hyper = { version = "1.0.1", features = ["full"] }
tokio-stream = "0.1.16"
tokio-util = "0.7.12"
tokio-compat-02 = "0.2.0"
crossbeam = "0.8.2"
dashmap = "5.5.3"
envy = "^0.4.1"
metrohash = "1.0.6"
regex = "1.7.3"
futures = "0.3.25"
num_cpus = "1.15.0"
# randomness
rand = "0.8.5"
rand_distr = "0.4.3"
rand_pcg = "0.3.1"
simplelog = "0.12.1"
# serialization
bincode = "1.3.3"
capnp = "^0.18.1"
capnp-futures = "0.18.0"
serde = { version = "1.0.210", features = ["rc", "derive"] }
serde_closure = "0.3.3"
serde_derive = "1.0.210"
uriparse = "0.6.4"
once_cell = "1.17.1"
# dynamic typing
downcast-rs = "1.2.1"
dyn-clone = "1.0.17"
erased-serde = "0.4.1"
itertools = "0.12.0"
hdrs = "0.3.2"
log = "0.4.20"
# optional features
## aws
urlparse = "0.7.3"
url = "2.4.1"
rusoto_core = { version = "0.48.0" }
rusoto_s3 = { version = "0.48.0" }
parking_lot = "0.12.1"
chrono = "0.4.31"
parquet = "49.0.0"
toml = "0.8.0"
tempfile = "3.5.0"
thiserror = "1.0"
statrs = "0.17.1"
typetag = "0.2"

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]


[build-dependencies]
capnpc = "0.20.0"
