[package]
name = "atomic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
doctest = false

[dependencies]
fasthash = { workspace = true }
http = { workspace = true}
async-trait = { workspace = true }
tokio = { workspace = true, features = ["full"] }
hyper = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
crossbeam = { workspace = true }
dashmap = { workspace = true }
envy = { workspace = true }
metrohash = { workspace = true }
regex = { workspace = true }
futures = { workspace = true }
num_cpus = { workspace = true }
# randomness
rand = { workspace = true }
rand_distr = { workspace = true }
rand_pcg = { workspace = true }
simplelog = { workspace = true }
# serialization
bincode = { workspace = true }
rkyv = { workspace = true }
serde = { workspace = true, features = ["rc", "derive"] }
serde_closure = { workspace = true }
serde_derive = { workspace = true }
uriparse = { workspace = true }
once_cell = { workspace = true }
# dynamic typing
downcast-rs = { workspace = true }
dyn-clone = { workspace = true }
erased-serde = { workspace = true }
typetag = { workspace = true }
itertools = { workspace = true }
hdrs = { workspace = true }
log = { workspace = true }
# optional features
## aws
urlparse = { workspace = true }
url = { workspace = true }
rusoto_core = { workspace = true }
rusoto_s3 = { workspace = true }
parking_lot = { workspace = true }
chrono = { workspace = true }
parquet = { workspace = true }
toml = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
statrs = { workspace = true }

[dependencies.uuid]
workspace = true
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]


[build-dependencies]
capnpc = "0.20.0"
