[package]
name = "atomic-cli"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde = { workspace = true, features = ["derive"] }
toml.workspace = true
tokio = { workspace = true }
async-trait = { workspace = true }

# SSH / SFTP — pure-Rust, no Docker, no shelling out
russh = "0.60"
russh-sftp = "2.1"

# Binary integrity check
sha2 = "0.11.0"
hex = "0.4"
