[package]
name = "atomic-cli"
version.workspace = true
edition.workspace = true

[dependencies]
clap.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
toml.workspace = true
tokio = { workspace = true }
async-trait = { workspace = true }

# SSH / SFTP — pure-Rust, no Docker, no shelling out
russh = "0.61.2"
russh-sftp = "2.1"

# Binary integrity check
sha2 = { workspace = true }
hex = { workspace = true }
