[package]
name = "atomic-compute"
version.workspace = true
edition.workspace = true

[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
toml = { workspace = true }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tonic-build = { workspace = true }
hyper = { workspace = true }
http-body-util = { workspace = true }
http = { workspace = true }
tempfile = { workspace = true }
inventory = { workspace = true }
once_cell.workspace = true
dashmap.workspace = true
rand.workspace = true
parking_lot.workspace = true
log.workspace = true
env_logger = { workspace = true }
clap = { workspace = true }
uuid.workspace = true
async-trait.workspace = true
statrs.workspace = true
itertools.workspace = true
rand_distr.workspace = true
rand_pcg.workspace = true
dotenvy.workspace = true
rustc-hash.workspace = true
num_cpus.workspace = true
bincode.workspace = true
rkyv.workspace = true
dyn-clone.workspace = true
futures.workspace = true
crossbeam.workspace = true
hyper-util.workspace = true
atomic-data.workspace = true
atomic-utils.workspace = true
atomic-scheduler.workspace = true
atomic-runtime-macros.workspace = true
tokio-util.workspace = true
pyo3 = { workspace = true, optional = true }
pythonize = { workspace = true, optional = true }
deno_core = { workspace = true, optional = true }
base64 = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-config = { workspace = true }
aws-credential-types = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
rdkafka = { workspace = true, optional = true, features = ["cmake-build"] }
atomic-k8s = { workspace = true, optional = true }

[features]
# Embedded PyO3 thread-pool — each worker thread acquires the GIL per task.
python = ["pyo3", "pythonize", "atomic-data/python"]
# Embedded V8 (deno_core) — thread-local JsRuntime per tokio blocking thread.
js = ["deno_core", "atomic-data/js"]
embedded-runtime = ["python", "js"]
# Enables TaskAction::KafkaConsume dispatch on workers (pulls in librdkafka via cmake).
kafka = ["dep:rdkafka", "atomic-data/kafka"]
# Driver-side Kubernetes worker allocator (per-job dedicated pods via kube-rs).
k8s = ["dep:atomic-k8s"]

[dev-dependencies]
