[package]
name = "atomic-data"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
rustc-hash ={ workspace = true }
rkyv = { workspace = true }
log = { workspace = true }
atomic-utils = { path = "../atomic-utils" }
thiserror = { workspace = true }
dyn-clone = { workspace = true }
bincode = { workspace = true }
dashmap = { workspace = true }
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
statrs = { workspace = true }
parking_lot = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
hyper = { workspace = true }
http-body-util = { workspace = true }
hyper-util = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
crossbeam = { workspace = true }
once_cell = { workspace = true }
toml = { workspace = true }
