[package]
name = "atomic-data"
version.workspace = true
edition.workspace = true

[features]
default = []
python = []                                                    # enables TaskRuntime::Python
js = []                                                         # enables TaskRuntime::JavaScript
scripted = ["python", "js"]                                    # both shipped (non-native) task runtimes
tls = ["dep:tokio-rustls", "dep:rustls", "dep:rustls-pemfile"]
kafka = []                                                     # enables TaskAction::KafkaConsume

[dependencies]
serde = { workspace = true, features = ["derive"] }
rustc-hash = { workspace = true }
rkyv = { workspace = true }
log = { workspace = true }
atomic-utils = { workspace = true }
thiserror = { workspace = true }
dyn-clone = { workspace = true }
bincode = { workspace = true }
dashmap = { workspace = true }
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
statrs = { workspace = true }
parking_lot = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
hyper = { workspace = true }
http-body-util = { workspace = true }
hyper-util = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
crossbeam = { workspace = true }
once_cell = { workspace = true }
subtle = { workspace = true }
lru = { workspace = true }
toml = { workspace = true }
tempfile = { workspace = true }
tokio-rustls = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
rustls-pemfile = { workspace = true, optional = true }
