[package]
name = "atomic-graph"
version.workspace = true
edition.workspace = true

[dependencies]
# Atomic engine — graphs run as RDD jobs on the compute layer.
atomic-compute = { workspace = true }
atomic-data = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
# serialization — graph value types travel the wire (rkyv) and shuffle (bincode)
rkyv = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true, features = ["rc", "derive"] }
num_cpus = { workspace = true }
