[package]
name = "atomic-js"
version.workspace = true
edition.workspace = true

[lib]
name = "atomic_js"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.9.0", features = ["napi8", "serde-json"] }
napi-derive = "3.5.6"
atomic-data = { workspace = true, features = ["javascript"] }
atomic-compute = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
napi-build = "2"
