[package]
name = "atomic-js"
version.workspace = true
edition.workspace = true

[lib]
name = "atomic_js"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.9.0", features = ["napi8", "serde-json"] }
napi-derive = "3.5.6"
atomic-data = { workspace = true, features = ["js"] }
atomic-compute = { workspace = true }
atomic-graph = { workspace = true }
atomic-sql = { workspace = true }
atomic-nlq = { workspace = true, features = ["js"] }
datafusion = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[features]
s3 = ["atomic-compute/s3"]

[build-dependencies]
napi-build = "2"
