[package]
name = "atomic-k8s"
version.workspace = true
edition.workspace = true

[dependencies]
atomic-scheduler = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
kube = { version = "4.0.0", default-features = false, features = ["client", "rustls-tls", "runtime"] }
k8s-openapi = { version = "0.28.0", features = ["latest"] }
