[package]
name = "atomic-nlq"
version.workspace = true
edition.workspace = true

[features]
integration = []

[dependencies]
atomic-sql = { workspace = true }
atomic-compute = { workspace = true }
datafusion = { workspace = true }
async-openai = { version = "0.41.0", features = [
    "chat-completion",
    "embedding",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
reqwest = { version = "0.13", features = ["json"] }
futures = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }
log = { workspace = true }
async-stream = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
