[package]
name = "atomic-nlq"
version.workspace = true
edition.workspace = true

[features]
integration = []
# Forwarded to atomic-compute: lets agent_step TOOL_CALL: dispatch run Python tools
# resolved into AgentStepPayload.resolved_tools (PyWorkerPool).
python = ["atomic-compute/python"]
# Forwarded to atomic-compute: lets agent_step TOOL_CALL: dispatch run JS tools
# resolved into AgentStepPayload.resolved_tools (V8/deno_core).
js = ["atomic-compute/js"]

[dependencies]
atomic-sql = { workspace = true }
atomic-compute = { workspace = true }
atomic-data = { workspace = true }
datafusion = { workspace = true }
async-openai = { version = "0.41.0", features = [
    "chat-completion",
    "embedding",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
reqwest = { version = "0.13", features = ["json"] }
futures = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }
log = { workspace = true }
async-stream = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
atomic-compute = { workspace = true }
atomic-data = { workspace = true }
