[package]
name = "atomic-py"
version.workspace = true
edition.workspace = true

[lib]
name = "atomic_compute"
crate-type = ["cdylib", "rlib"]
# Tests must be run via `maturin develop` + Python, not `cargo test`.
# The cdylib target requires Python C symbols that are only available when
# loaded by a Python interpreter; standalone cargo test binaries will fail to link.
test = false
doctest = false

[dependencies]
pyo3 = { workspace = true, features = ["extension-module", "abi3-py311"] }
atomic-compute = { workspace = true }
atomic-data = { workspace = true, features = ["python"] }
atomic-sql = { workspace = true }
atomic-graph = { workspace = true }
datafusion = { workspace = true }
tokio = { workspace = true }
pyo3-arrow = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }

[features]
s3 = ["atomic-compute/s3"]
