[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "atomic-compute"
version = "0.1.0"
requires-python = ">=3.11"
description = "Atomic compute engine — Spark-like Python driver API backed by stable Rust"
license = { text = "Apache-2.0" }
readme = "../../README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Distributed Computing",
]

[project.urls]
Homepage = "https://github.com/sandip-dey/atomic"
Repository = "https://github.com/sandip-dey/atomic"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.maturin]
module-name = "atomic_compute"
features = ["pyo3/extension-module"]
# Pick up type stubs from python/atomic_compute/__init__.pyi
python-packages = ["python/atomic_compute"]
