[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "atomic-compute"
version = "0.1.0"
requires-python = ">=3.11"
description = "Atomic compute engine — Spark-like Python driver API backed by stable Rust"
license = { text = "Apache-2.0" }
readme = "../../README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Distributed Computing",
]

[project.urls]
Homepage = "https://github.com/sandip-dey/atomic"
Repository = "https://github.com/sandip-dey/atomic"

[project.optional-dependencies]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "cloudpickle>=3.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.maturin]
module-name = "atomic_compute"
features = ["pyo3/extension-module"]
# python/atomic_compute is the real package root: __init__.py re-exports the compiled
# extension, and pure-Python helper modules (_pair_helpers.py, _local_pool.py) live
# alongside it. `maturin develop` installs this editable, so .py edits take effect
# without a rebuild — only Rust changes need `maturin develop` again.
python-source = "python"
