[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "atomic"
requires-python = ">=3.11"
description = "Atomic compute engine — Python bindings"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
module-name = "atomic"
features = ["pyo3/extension-module"]
