[package]
name = "atomic-sql"
version.workspace = true
edition.workspace = true

[dependencies]
datafusion = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
futures = { workspace = true }
atomic-compute = { workspace = true }
atomic-data = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
