[package]
name = "atomic-streaming"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
tokio = { workspace = true, features = ["full"] }

# randomness
rand = { workspace = true }
# serialization
bincode = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rayon = { workspace = true }
petgraph = { version = "0.8.3" }
bit-set = { version = "0.10.0" }
log = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
atomic-compute = { workspace = true }
atomic-data = { workspace = true }
uuid = { version = "1.6.1" }
num_cpus = { workspace = true }


[lib]
name = "atomic_streaming"
path = "src/lib.rs"
doctest = false
